<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RecipeContentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/post_edit_window"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start|top"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.9">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:hint="@string/title_of_recipe"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toTopOf="@id/post_edit_window" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:hint="@string/author_name"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/edit_title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:hint="@string/category"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/edit_author" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:hint="@string/add_step_1"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@id/category" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_step2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:hint="@string/add_step"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@id/edit_step1" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipsGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:singleSelection="true"
            app:layout_constraintTop_toBottomOf="@id/category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip1"
                android:text="@string/europe"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                android:text="@string/asia"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                android:text="@string/pan_asian"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                android:text="@string/eastern"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip5"
                android:text="@string/american"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip6"
                android:text="@string/russian"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip7"
                android:text="@string/mediterranean"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/recipe_save"
        app:layout_anchor="@id/bottomAppBar"
        app:srcCompat="@drawable/ic_ok_24dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>